// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.tree_status.v1;

option go_package = "go.chromium.org/luci/tree_status/proto/v1";

service Trees {
  // Query tree for a LUCI project.
  rpc QueryTrees(QueryTreesRequest) returns (QueryTreesResponse) {};
}

message QueryTreesRequest {
  // The LUCI project to query tree name.
  string project = 1;
}

message QueryTreesResponse {
  // List of trees attached to the project.
  // Currently we only return at most one tree, as each project is attached to at most one tree.
  // We make this a repeated field for future compatibility, where we may want
  // to support more than one tree for a project.
  repeated Tree trees = 1;
}

message Tree {
  // Name of the tree, in format "trees/{tree_id}".
  string name = 1;
}
